@@ -1,13 +1,21 @@
+2010-10-11	The InnoDB Team
+
+	* row/row0mysql.c, innodb_bug56947.result, innodb_bug56947.test:
+	Fix Bug #56947 InnoDB leaks memory when failing to create a table
+
 2010-10-06	The InnoDB Team
+
 	* row/row0mysql.c, innodb_bug57255.result, innodb_bug57255.test
-	Fix Bug #Cascade Delete results in "Got error -1 from storage engine"
- 
+	Fix Bug #57255 Cascade Delete results in "Got error -1 from
+	storage engine"
+
 2010-09-27	The InnoDB Team
 
 	* row/row0sel.c, innodb_bug56716.result, innodb_bug56716.test:
 	Fix Bug #56716 InnoDB locks a record gap without locking the table
 
 2010-09-06	The InnoDB Team
+
 	* dict/dict0load.c, innodb_bug53756.test innodb_bug53756.result
 	Fix Bug #53756 	ALTER TABLE ADD PRIMARY KEY affects crash recovery
 
@@ -40,7 +48,6 @@
 	* handler/ha_innodb.cc
 	Fix Bug #55382 Assignment with SELECT expressions takes unexpected
 	S locks in READ COMMITTED
->>>>>>> MERGE-SOURCE
 
 2010-07-27	The InnoDB Team
 
